Overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,7 @@ main {
   z-index: 10;
   height: 100%;
   min-width: var(--min-width);
-  overflow-y: auto;
+  overflow-y: scroll;
   display: flex;
   justify-content: center;
   align-items: center;
